Fix long member name overflowing on team page

--- a/css/team_css/style3.css
+++ b/css/team_css/style3.css
@@ -421,6 +421,9 @@
 		0 0 1px #fff, 
 		0 1px 2px rgba(0,0,0,0.3);
 }
+.ch-info-h3-sm {
+	font-size: 11px !important;
+}
 
 .ch-info h4 {
 	color: #fff;
